# mds2zarr

./: LICENSE.txt  README.md  setup.cfg  setup.py
.github/workflows/: release.yaml  test.yaml
ci/: environment-py3.10.yml  environment-py3.8.yml  environment-py3.9.yml
docs/: api.rst  conf.py  environment.yml  index.rst
mds2zarr/: mds2zarr.py
tests/: conftest.py  test_mds2zarr.py
